--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <section class="sec-1" id="sec-1">
           <div class="heading wow slideInLeft slow"><h1>About Me</h1></div>
           <hr />
-          <div class="mybox jumbotron p-1">
+          <div class="mybox bg-dark text-white p-1">
             <div class="img_container">
               <img src="images/download.jpg" alt="" />
             </div>
@@ -228,31 +228,31 @@
             <h2>Soft Skills</h2>
             <h4>Communication</h4>
             <div class="progress">
-              <div class="progress-bar  bg-success" style="width:80%">
+              <div class="progress-bar bg-success" style="width: 80%;">
                 80%
               </div>
             </div>
             <h4>Problem Solving</h4>
             <div class="progress">
-              <div class="progress-bar  bg-success" style="width:90%">
+              <div class="progress-bar bg-success" style="width: 90%;">
                 90%
               </div>
             </div>
             <h4>Creativity</h4>
             <div class="progress">
-              <div class="progress-bar  bg-success" style="width:80%">
+              <div class="progress-bar bg-success" style="width: 80%;">
                 80%
               </div>
             </div>
             <h4>Interpersonal Skills</h4>
             <div class="progress">
-              <div class="progress-bar  bg-success" style="width:75%">
+              <div class="progress-bar bg-success" style="width: 75%;">
                 75%
               </div>
             </div>
             <h4>LeaderShip</h4>
             <div class="progress">
-              <div class="progress-bar  bg-success" style="width:90%">
+              <div class="progress-bar bg-success" style="width: 90%;">
                 90%
               </div>
             </div>
@@ -341,6 +341,10 @@
             <h1>My Works</h1>
           </div>
           <hr />
+          <h3 style="text-align: center;">
+            Some things that i have tried making.
+          </h3>
+          <h3 id="mob" class="ml-5">Tap any to see more</h3>
           <div class="row">
             <div class="col-6">
               <div
@@ -350,12 +354,17 @@
               >
                 <img src="images/02.jpg" alt="" class="card-img-top" />
                 <div class="card-body invis">
-                  <h4 class="card-title">Pehla</h4>
+                  <h4 class="card-title">Duet</h4>
                   <p class="card-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Facilis dolorem nesciunt accusantium ut suscipit possimus
-                    vel ab omnis veniam voluptatum.
+                    This is a simple recreation of the famous mobile game duet.
+                    Currently it doesn't have that many features but all basic
+                    mechanics are working.
                   </p>
+                  <a
+                    href="https://github.com/marmikupadhyay/game-coll/tree/master/duet"
+                    class="btn btn-block my-2 btn-primary rounded-0"
+                    >Visit</a
+                  >
                 </div>
               </div>
             </div>
@@ -372,12 +381,17 @@
                   id="doosra"
                 />
                 <div class="card-body invis">
-                  <h4 class="card-title">Doosra</h4>
+                  <h4 class="card-title">Break Out</h4>
                   <p class="card-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Facilis dolorem nesciunt accusantium ut suscipit possimus
-                    vel ab omnis veniam voluptatum.
+                    This is a simple recreation of the famous computer game
+                    Break Out. Currently it doesn't have that many features but
+                    all basic mechanics are working.
                   </p>
+                  <a
+                    href="https://github.com/marmikupadhyay/game-coll/tree/master/breakout"
+                    class="btn btn-block my-2 btn-primary rounded-0"
+                    >Visit</a
+                  >
                 </div>
               </div>
             </div>
@@ -391,12 +405,17 @@
               >
                 <img src="images/02.jpg" alt="" class="card-img-top" />
                 <div class="card-body invis">
-                  <h4 class="card-title">Teesra</h4>
+                  <h4 class="card-title">Ball Blast</h4>
                   <p class="card-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Facilis dolorem nesciunt accusantium ut suscipit possimus
-                    vel ab omnis veniam voluptatum.
+                    This is a simple recreation of the famous mobile game Ball
+                    Blast. Currently it doesn't have that many features but all
+                    basic mechanics are working.
                   </p>
+                  <a
+                    href="https://github.com/marmikupadhyay/game-coll/tree/master/ballBlast"
+                    class="btn btn-block my-2 btn-primary rounded-0"
+                    >Visit</a
+                  >
                 </div>
               </div>
             </div>
@@ -528,8 +547,8 @@
         </div>
         <div class="foot">
           <h2>
-            Made with <span style="color:rgba(255,0,0,.7);">&#x2764;</span> By
-            Marmik
+            Made with
+            <span style="color: rgba(255, 0, 0, 0.7);">&#x2764;</span> By Marmik
           </h2>
         </div>
       </div>
