--- a/duet/index.html
+++ b/duet/index.html
@@ -12,6 +12,6 @@
     <div class="wrapper">
       <canvas id="game-screen" width="600" height="600"></canvas>
     </div>
-    <script type="module" src="js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
