--- a/deltaTask1/index.html
+++ b/deltaTask1/index.html
@@ -20,7 +20,7 @@
               <li class="nav-item">
                 <a href="/index.html" class="active"> Normal</a>
               </li>
-              <li class="nav-item"><a href="/hacker/index.html">Hacker</a></li>
+              <li class="nav-item"><a href="hacker/index.html">Hacker</a></li>
               <li class="nav-item"><a href="">Hacker++</a></li>
             </ul>
           </div>
