--- a/deltaTask1/hacker/index.html
+++ b/deltaTask1/hacker/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/hacker/main.css" />
+    <link rel="stylesheet" href="main.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap"
       rel="stylesheet"
@@ -21,9 +21,9 @@
           <div class="nav">
             <h1>Select Mode</h1>
             <ul>
-              <li class="nav-item"><a href="/index.html"> Normal</a></li>
+              <li class="nav-item"><a href="../index.html"> Normal</a></li>
               <li class="nav-item">
-                <a href="/hacker/index.html" class="active">Hacker</a>
+                <a href="index.html" class="active">Hacker</a>
               </li>
               <li class="nav-item"><a href="">Hacker++</a></li>
             </ul>
@@ -56,6 +56,6 @@
         </div>
       </div>
     </section>
-    <script src="/hacker/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
