--- a/deltaTask1/index.html
+++ b/deltaTask1/index.html
@@ -18,7 +18,7 @@
             <h1>Select Mode</h1>
             <ul>
               <li class="nav-item">
-                <a href="/index.html" class="active"> Normal</a>
+                <a href="index.html" class="active"> Normal</a>
               </li>
               <li class="nav-item"><a href="hacker/index.html">Hacker</a></li>
               <li class="nav-item"><a href="">Hacker++</a></li>
