Added Hacker Mode

--- a/deltaTask1/hacker/index.html
+++ b/deltaTask1/hacker/index.html
@@ -25,7 +25,9 @@
               <li class="nav-item">
                 <a href="index.html" class="active">Hacker</a>
               </li>
-              <li class="nav-item"><a href="">Hacker++</a></li>
+              <li class="nav-item">
+                <a href="../hackerPlus/index.html">Hacker++</a>
+              </li>
             </ul>
             <h2>Select Difficulty</h2>
             <select name="" id="diff">
