--- a/deltaTask1/hackerPlus/index.html
+++ b/deltaTask1/hackerPlus/index.html
@@ -11,20 +11,32 @@
     <title>Speed Tester</title>
   </head>
   <body>
+    <audio id="tap" src="tap.mp3"></audio>
+    <audio id="start" src="321-go.mp3"></audio>
+    <audio id="finish" src="finish.mp3"></audio>
+
     <section class="sec-1 row">
       <div class="col-3" id="left">
         <div class="wrap">
           <div class="nav">
             <h1>Select Mode</h1>
             <ul>
+              <li class="nav-item"><a href="../index.html"> Normal</a></li>
               <li class="nav-item">
-                <a href="index.html" class="active"> Normal</a>
+                <a href="../hacker/index.html">Hacker</a>
               </li>
-              <li class="nav-item"><a href="hacker/index.html">Hacker</a></li>
               <li class="nav-item">
-                <a href="hackerPlus/index.html">Hacker++</a>
+                <a href="index.html" class="active">Hacker++</a>
               </li>
             </ul>
+            <h2>Select Difficulty</h2>
+            <select name="" id="diff">
+              <option value="1">Easy</option>
+              <option value="2" selected>Normal</option>
+              <option value="3">Intermediate</option>
+              <option value="4">Hard</option>
+              <option value="5">Extreme</option>
+            </select>
           </div>
         </div>
       </div>
@@ -41,9 +53,8 @@
         <div class="wrap">
           <div class="score-box">
             <h1>High Scores</h1>
-            <ul class="scores"></ul>
-            <button class="reset">Reset</button>
           </div>
+          <button class="reset">Reset</button>
         </div>
       </div>
     </section>
