--- a/deltaTask1/hackerPlus/index.html
+++ b/deltaTask1/hackerPlus/index.html
@@ -37,6 +37,16 @@
               <option value="4">Hard</option>
               <option value="5">Extreme</option>
             </select>
+            <label for="">Select Tile Color</label>
+            <input type="color" name="" id="bgcolor" class="colorsel" />
+            <label for="">Select Tile Text Color</label>
+            <input
+              type="color"
+              name=""
+              id="txtcolor"
+              class="colorsel"
+              value="#ffffff"
+            />
           </div>
         </div>
       </div>
