--- a/DeltaWDTask-2/index.html
+++ b/DeltaWDTask-2/index.html
@@ -11,6 +11,7 @@
     <audio src="sounds/jump.wav" id="jump"></audio>
     <audio src="sounds/bgMusic.mp3" id="bgMusic"></audio>
     <audio src="sounds/dead.wav" id="dead"></audio>
+    <audio src="sounds/star.wav" id="collect"></audio>
     <div class="hide" id="pixel" style="width: 100px; background: blue;">q</div>
     <div class="wrap">
       <img src="imgs/pause.png" alt="" id="pause" class="hide" />
@@ -53,9 +54,9 @@
           obstacle of color other than you current ball color.If you do the game
           ends.The game also ends if you fall out of the screen.Your goal is to
           survive for the longest time and the more obstacles you clear the more
-          points you earn.You can change the ball color by collecting the
-          diffrent color balls that apear on the screen.
+          points you earn.
         </p>
+
         <h2 class="subhead">
           PowerUps
         </h2>
