--- a/DeltaWDTask-2/index.html
+++ b/DeltaWDTask-2/index.html
@@ -28,7 +28,7 @@
         <li
           class="list-item"
           id="play"
-          onclick="location='../multiplayer/index.html'"
+          onclick="location='multiplayer/index.html'"
         >
           Multiplayer
         </li>
