--- a/SpiderWDTask-1/index.html
+++ b/SpiderWDTask-1/index.html
@@ -9,6 +9,7 @@
   <body>
     <audio src="sounds/pop.wav" id="pop"></audio>
     <audio src="sounds/dead.wav" id="dead"></audio>
+    <audio src="sounds/tick.mp3" id="tick"></audio>
     <audio src="sounds/bgMusic.mp3" id="bgMusic"></audio>
     <div class="hide" id="pixel" style="width: 100px; background: blue;">q</div>
     <div class="wrap">
@@ -51,7 +52,8 @@
           The Game is very simple all you have to do is pop the bubbles , by
           taping on them. Bubbles will keep on generating. As time passes more
           and more bubbles will generate faster.If the screen gets covered with
-          more than 75% with bubbles the game ends.
+          more than 75% with bubbles the game ends. The scoring is simple , the
+          bigger the bubble you pop the more points you get.
         </p>
       </div>
       <ul class="menu-list scores">
