--- a/SpiderWDTask-1/index.html
+++ b/SpiderWDTask-1/index.html
@@ -10,13 +10,16 @@
     <audio src="sounds/pop.wav" id="pop"></audio>
     <audio src="sounds/dead.wav" id="dead"></audio>
     <audio src="sounds/tick.mp3" id="tick"></audio>
+    <audio src="sounds/star.wav" id="star"></audio>
     <audio src="sounds/bgMusic.mp3" id="bgMusic"></audio>
     <div class="hide" id="pixel" style="width: 100px; background: blue;">q</div>
     <div class="wrap">
-      <img src="imgs/pause.png" alt="" id="pause" class="hide" />
       <img src="imgs/bubble1.png" alt="" id="bubble" class="" />
-
-      <canvas id="game-screen"></canvas>
+      <div class="canvas-wrap">
+        <img src="imgs/pause.png" alt="" id="pause" class="hide" />
+        <img src="imgs/liquidluck.png" alt="" id="luck" class="hide" />
+        <canvas id="game-screen"></canvas>
+      </div>
     </div>
     <section class="menu">
       <h1 class="heading">
@@ -71,6 +74,15 @@
               more than 1000. To break them you need to tap them 5 times.
             </p>
           </div>
+        </div>
+        <h2 class="subhead">PowerUps</h2>
+        <div class="obstacle">
+          <img src="imgs/liquidluck.png" alt="" />
+          <p>
+            This is the Felix-Felicis. Your day gets luckier when you use it.
+            The bubbles spawn slowly for 5 seconds. But you can only use it
+            twice.
+          </p>
         </div>
       </div>
       <ul class="menu-list scores">
