--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="row-6">
             <hr style="margin-top: 20px;" />
             <img
-              src="images/download.jpg"
+              src="images/download.png"
               alt=""
               class="profile rounded-circle"
             />
@@ -58,10 +58,21 @@
           </div>
           <div class="row-4">
             <ul class="profileUL">
-              <li class="">Age - 18</li>
-              <li class="">Sex - M</li>
-              <li class="">Blah</li>
-              <li class="">Blah</li>
+              <li class="">
+                Age -
+                <span style="float: right; margin-right: 15px;"> 18</span>
+              </li>
+              <li class="">
+                Current Occupation-
+                <span style="float: right; margin-right: 15px;"> Student</span>
+              </li>
+              <li class="">
+                Currently at-
+                <span style="float: right; margin-right: 15px;">
+                  Trichy,India</span
+                >
+              </li>
+              <li class=""></li>
             </ul>
           </div>
           <hr id="leftend" />
@@ -78,11 +89,11 @@
           <hr />
           <div class="mybox bg-dark text-white p-1">
             <div class="img_container">
-              <img src="images/download.jpg" alt="" />
+              <img src="images/phot.jpg" alt="" />
             </div>
             <p>
               Hey There Visitor ! <br />
-              I am Marmik Upahyay , a student doing my B.Tech Computer Science
+              I am Marmik Upadhyay , a student doing my B.Tech Computer Science
               and engineering in NIT Tiruchirappalli. <br />
               <span>I am a </span>
               <span class="wow typewriter2">Coder</span>
@@ -199,7 +210,7 @@
               </div>
 
               <div id="skillwrap">
-                <h4>CSS</h4>
+                <h4>CSS3</h4>
                 <img src="images/css3.png" alt="" />
                 <div class="progress-circle over50 p80">
                   <span>80%</span>
@@ -215,6 +226,46 @@
                 <img src="images/js.png" alt="" />
                 <div class="progress-circle p40">
                   <span>40%</span>
+                  <div class="left-half-clipper">
+                    <div class="first50-bar"></div>
+                    <div class="value-bar"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="skill">
+              <div id="skillwrap">
+                <h4>BootStrap</h4>
+                <img src="images/bootstrap.png" alt="" />
+                <div class="progress-circle over50 p70">
+                  <span>70%</span>
+                  <div class="left-half-clipper">
+                    <div class="first50-bar"></div>
+                    <div class="value-bar"></div>
+                  </div>
+                </div>
+              </div>
+
+              <div id="skillwrap">
+                <h4>Node.JS</h4>
+                <img
+                  src="https://cdn.worldvectorlogo.com/logos/nodejs-icon.svg"
+                  alt=""
+                />
+                <div class="progress-circle p30">
+                  <span>30%</span>
+                  <div class="left-half-clipper">
+                    <div class="first50-bar"></div>
+                    <div class="value-bar"></div>
+                  </div>
+                </div>
+              </div>
+
+              <div id="skillwrap">
+                <h4>MongoDB</h4>
+                <img src="/images/mongo.png" alt="" />
+                <div class="progress-circle p50">
+                  <span>50%</span>
                   <div class="left-half-clipper">
                     <div class="first50-bar"></div>
                     <div class="value-bar"></div>
@@ -268,14 +319,6 @@
               >Numerous <br />
               Events</span
             >
-            <!-- <span
-              class="colorlib-counter js-counter"
-              data-from="0"
-              data-to="300"
-              data-speed="5000"
-              data-refresh-interval="50"
-              >300+</span
-            > -->
             <span id="s2"
               >Countless <br />
               Experiences</span
