Added new skill

--- a/index.html
+++ b/index.html
@@ -95,8 +95,6 @@
               Hey There Visitor ! <br />
               I am Marmik Upadhyay , a student doing my B.Tech Computer Science
               and engineering in NIT Tiruchirappalli. <br />
-              <span>I am a </span>
-              <span class="wow typewriter2">Coder</span>
             </p>
           </div>
           <div class="heading" id="hed2">
@@ -160,7 +158,7 @@
           <div class="skillbox">
             <h2>Technical Skills</h2>
             <h3>Coding - What I know and how much.</h3>
-            <div class="skill">
+            <div class="skill coding">
               <div id="skillwrap">
                 <h4>C</h4>
                 <img src="images/c.png" alt="" />
@@ -196,6 +194,8 @@
               </div>
             </div>
             <h3>Web Devlopment - What I know and how much.</h3>
+            <h1 class="pl-4">Front End Devlopment</h1>
+            <hr />
             <div class="skill">
               <div id="skillwrap">
                 <h4>Html5</h4>
@@ -232,13 +232,50 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="skill">
               <div id="skillwrap">
                 <h4>BootStrap</h4>
                 <img src="images/bootstrap.png" alt="" />
                 <div class="progress-circle over50 p70">
                   <span>70%</span>
+                  <div class="left-half-clipper">
+                    <div class="first50-bar"></div>
+                    <div class="value-bar"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <h1 class="pl-4">Mern Stack</h1>
+            <hr />
+            <div class="skill">
+              <div id="skillwrap">
+                <h4>MongoDB</h4>
+                <img src="/images/mongo.png" alt="" />
+                <div class="progress-circle p50">
+                  <span>50%</span>
+                  <div class="left-half-clipper">
+                    <div class="first50-bar"></div>
+                    <div class="value-bar"></div>
+                  </div>
+                </div>
+              </div>
+
+              <div id="skillwrap">
+                <h4>Express.JS</h4>
+                <img src="images/express.png" alt="" />
+                <div class="progress-circle p40">
+                  <span>40%</span>
+                  <div class="left-half-clipper">
+                    <div class="first50-bar"></div>
+                    <div class="value-bar"></div>
+                  </div>
+                </div>
+              </div>
+
+              <div id="skillwrap">
+                <h4>React</h4>
+                <img src="images/react.png" alt="" />
+                <div class="progress-circle p20">
+                  <span>20%</span>
                   <div class="left-half-clipper">
                     <div class="first50-bar"></div>
                     <div class="value-bar"></div>
@@ -252,18 +289,6 @@
                   src="https://cdn.worldvectorlogo.com/logos/nodejs-icon.svg"
                   alt=""
                 />
-                <div class="progress-circle p30">
-                  <span>30%</span>
-                  <div class="left-half-clipper">
-                    <div class="first50-bar"></div>
-                    <div class="value-bar"></div>
-                  </div>
-                </div>
-              </div>
-
-              <div id="skillwrap">
-                <h4>MongoDB</h4>
-                <img src="/images/mongo.png" alt="" />
                 <div class="progress-circle p50">
                   <span>50%</span>
                   <div class="left-half-clipper">
@@ -385,7 +410,7 @@
           </div>
           <hr />
           <h3 style="text-align: center;">
-            Some things that i have tried making.
+            Some things that I have tried making.
           </h3>
           <h3 id="mob" class="ml-5">Tap any to see more</h3>
           <div class="row">
@@ -475,12 +500,16 @@
                   id="doosra"
                 />
                 <div class="card-body invis">
-                  <h4 class="card-title">Chotha</h4>
+                  <h4 class="card-title">A Basic Node Dating Site</h4>
                   <p class="card-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Facilis dolorem nesciunt accusantium ut suscipit possimus
-                    vel ab omnis veniam voluptatum.
+                    This is Just a basic Node , Express and MongoDB , webapp ,
+                    that is a dating site.
                   </p>
+                  <a
+                    href="https://github.com/marmikupadhyay/TrialNodeApp"
+                    class="btn btn-block my-2 btn-primary rounded-0"
+                    >Visit</a
+                  >
                 </div>
               </div>
             </div>
