--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
               <div id="skillwrap">
                 <h4>JavaScript</h4>
                 <img src="images/js.png" alt="" />
-                <div class="progress-circle p40">
-                  <span>40%</span>
+                <div class="progress-circle over50 p70">
+                  <span>70%</span>
                   <div class="left-half-clipper">
                     <div class="first50-bar"></div>
                     <div class="value-bar"></div>
