Commit XI - Url fixed to https

--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
       src="https://code.jquery.com/jquery-2.1.1.min.js"
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script>
       $(".counter").counterUp({
         time: 2000
