--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
             </div>
           </div>
         </section>
-        <div class="fixed-action-btn">
+        <div class="fixed-action-btn click-to-toggle">
           <a href="#/" class="btn-floating red btn-large"
             ><i class="large material-icons">menu</i></a
           >
