Commit-XIX:Added 2 projects.

--- a/index.html
+++ b/index.html
@@ -520,6 +520,66 @@
                 onmouseover="showcard(this)"
                 onmouseout="hidecard(this)"
               >
+                <img src="images/bsg.JPG" alt="" class="card-img-top" />
+                <div class="card-body invis">
+                  <h4 class="card-title">Blogstagram</h4>
+                  <p class="card-text">
+                    A simple node app created for a task that allows user to
+                    post blogs,view others blogs and follow other users.
+                  </p>
+                  <a
+                    href="https://blogstagram.herokuapp.com"
+                    class="btn btn-block my-2 btn-primary rounded-0"
+                    >Visit</a
+                  >
+                  <a
+                    href="https://github.com/marmikupadhyay/SpiderWDTask-2"
+                    class="btn btn-block my-2 btn-primary rounded-0"
+                    >Show Me the Code</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <div
+                class="card"
+                onmouseover="showcard(this)"
+                onmouseout="hidecard(this)"
+              >
+                <img
+                  src="images/ib.JPG"
+                  alt=""
+                  class="card-img-top"
+                  id="doosra"
+                />
+                <div class="card-body invis">
+                  <h4 class="card-title">Invite Book</h4>
+                  <p class="card-text">
+                    A very basic node-app created for a task,which has a similar
+                    UI like his twin brother Blogstagram.It allows you to send
+                    invitations to and accept invitations from different users.
+                  </p>
+                  <a
+                    href="https://invitebook.herokuapp.com"
+                    class="btn btn-block my-2 btn-primary rounded-0"
+                    >Visit</a
+                  >
+                  <a
+                    href="https://github.com/marmikupadhyay/DeltaWDTask-3"
+                    class="btn btn-block my-2 btn-primary rounded-0"
+                    >Show Me the Code</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div
+                class="card"
+                onmouseover="showcard(this)"
+                onmouseout="hidecard(this)"
+              >
                 <img src="images/02.jpg" alt="" class="card-img-top" />
                 <div class="card-body invis">
                   <h4 class="card-title">Tile Breaker</h4>
