Commit-XXI:Added My info in assignment.

--- a/codingassignment/index.html
+++ b/codingassignment/index.html
@@ -103,6 +103,15 @@
             <sup>n</sup>C<sub>r</sub>
           </p>
         </div>
+        <div class="credit-box z-depth-3">
+          <h4 class="subhead">Made By</h4>
+          <blockquote class="info">
+            Marmik Upadhyay <br />
+            Roll No:- 106119073 <br />
+            Section:- CSE - A <br />
+            Year:- First Year
+          </blockquote>
+        </div>
       </div>
       <div class="col m6 s12">
         <div class="head center cyan lighten-3">
